wgsl_bindgen/src/quote_gen/snapshots/include_relative_root_but_dont_generate_it.snap
---
source: wgsl_bindgen/src/quote_gen/rust_module_builder.rs
---
#[allow(unused, non_snake_case, non_camel_case_types, non_upper_case_globals)]
pub mod a {
  use super::{_root, _root::*};
  struct B {
    a: a::b::A,
  }
  #[allow(unused, non_snake_case, non_camel_case_types, non_upper_case_globals)]
  pub mod b {
    use super::{_root, _root::*};
    struct A;
  }
}
