wgsl_bindgen/src/quote_gen/snapshots/merge.snap
---
source: wgsl_bindgen/src/quote_gen/rust_module_builder.rs
---
#[allow(unused, non_snake_case, non_camel_case_types, non_upper_case_globals)]
pub mod a {
  #[allow(unused, non_snake_case, non_camel_case_types, non_upper_case_globals)]
  pub mod b {
    #[allow(unused, non_snake_case, non_camel_case_types, non_upper_case_globals)]
    pub mod c {
      struct A;
      struct C;
    }
    #[allow(unused, non_snake_case, non_camel_case_types, non_upper_case_globals)]
    pub mod d {
      struct B;
    }
    #[allow(unused, non_snake_case, non_camel_case_types, non_upper_case_globals)]
    pub mod e {
      struct D;
    }
  }
}
