wgsl_bindgen/src/quote_gen/snapshots/module_add_duplicates.snap
---
source: wgsl_bindgen/src/quote_gen/rust_module_builder.rs
---
#[allow(unused, non_snake_case, non_camel_case_types, non_upper_case_globals)]
pub mod a {
  struct B;
  #[allow(unused, non_snake_case, non_camel_case_types, non_upper_case_globals)]
  pub mod b {
    struct A;
  }
}
