wgsl_bindgen/src/quote_gen/snapshots/module_generation_works.snap
---
source: wgsl_bindgen/src/quote_gen/rust_module_builder.rs
---
#[allow(unused, non_snake_case, non_camel_case_types, non_upper_case_globals)]
pub mod a {
  #[allow(unused, non_snake_case, non_camel_case_types, non_upper_case_globals)]
  pub mod b {
    #[allow(unused, non_snake_case, non_camel_case_types, non_upper_case_globals)]
    pub mod c {
      struct B;
      struct C;
      #[allow(unused, non_snake_case, non_camel_case_types, non_upper_case_globals)]
      pub mod d {
        struct A;
      }
    }
  }
}
